<resources>
    <string name="app_name">Love Blocks</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="projects">My projects</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_acc">Don\'t have an account?</string>
    <string name="alreadyAcc">Already have an account?</string>
    <string name="password_confirmation">Password confirmation</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">blocks.love</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="msg_subscribed">SUB Message</string>

    <string name="push_error_device_not_compatible">YOur device is not compatible</string>

    <string name="downloading">Downloading…</string>
    <string name="downloading_msg">Your APK is Downloading…</string>
    <string name="title_file_download">APK is downloading</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="update_play_service">Pleas update google play services.</string>
    <string name="ok">OK</string>
    <string name="apk">APK</string>

    <string name="menu_projects">Refresh projects</string>
    <string name="menu_sign_out">Sign Out</string>

    <string name="install_love">Pleas install Love for android, you can not open games without it.</string>
    <string name="install_love_title">Love for Android required</string>

    <string name="connect_to_server">Something went wrong, application can not connect to the server. Please try again later.</string>
    <string name="something_wrong_title">Something went wrong</string>

    <string name="connect_to_internet">Application needs internet connection to work properly.</string>
    <string name="connect_to_internet_title">Internet connection</string>

    <string name="play_services">Application needs google play services installed properly.</string>
    <string name="play_services_title">Google play services</string>

    <string name="background">Please allow application to work in background.</string>
    <string name="background_title">Allow work in background</string>

    <string name="install_access_required">Install access is required to install application.</string>
    <string name="storage_access_required">Storage access is required to downloading the file.</string>
    <string name="write_access_required">Storage access is required to downloading the file.</string>
    <string name="read_access_required">Storage access is required to downloading the file.</string>
    <string name="open">OPEN</string>
    <string name="info">Info</string>
    <string name="how_it_works_title">How it works</string>
    <string name="how_it_works">This application works with www.loveblocks.tk, it helps you to download your projects to your android device. Projects will be saved in your Downloads folder. For opening them you will need to install LÖVE for Android from play store.</string>
</resources>
